EE-70: Workbench * Fixes width overflow in some browsers via .row margins

--- a/drupal/sites/all/themes/oneepa/css/eenterprise.css
+++ b/drupal/sites/all/themes/oneepa/css/eenterprise.css
@@ -83,7 +83,8 @@ a.tabledrag-handle .handle {margin:-0.25em 0.5em}
 .page-eenterprise-for-environment .breadcrumb, .page-eenterprise-for-environment .breadcrumb-title {display:none;}
 .breadcrumb {margin-top:20px;}
 .page-welcome .row, .page-eenterprise-for-environment .row {padding:0.5em 0;}
-.page-welcome .row, .page-eenterprise-for-environment .row, .page-welcome .view-footer h3, .page-eenterprise-for-environment .view-footer h3 {margin-left:1em !important;} /* s.css override */
+.page-eenterprise-for-environment .row {margin-left:0px !important;margin-right:0px !important;}
+.page-welcome .view-footer h3, .page-eenterprise-for-environment .view-footer h3 {margin-left:1em !important;} /* s.css override */
 .page-eenterprise-for-environment .view-footer h3 {margin-top:1em;margin-bottom:5px;padding-bottom:0;}
 .page-welcome .view-footer li h3, .page-eenterprise-for-environment .view-footer li h3 {margin:0 !important;}
 .row.shaded {background-color:#f7f7f9;border:1px solid #e1e1e8;border-width:1px 0;margin:1em 0 !important;padding:0 1em;}
